--- a/eventura-app/package.json
+++ b/eventura-app/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/stack": "^7.3.1",
     "expo": "^53.0.7",
+    "expo-image-picker": "^16.1.4",
+    "expo-location": "^18.1.5",
     "expo-router": "~5.0.5",
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
     "react-native": "^0.79.2",
+    "react-native-calendars": "^1.1312.0",
     "router": "^2.2.0"
   },
   "devDependencies": {
