--- a/eventura-app/package.json
+++ b/eventura-app/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
     "react-native": "^0.79.2",
+    "react-native-dotenv": "^3.4.11",
     "router": "^2.2.0"
   },
   "devDependencies": {
