--- a/eventura-app/package.json
+++ b/eventura-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/stack": "^7.3.1",
     "expo": "^53.0.7",
     "expo-router": "~5.0.5",
@@ -20,7 +21,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
     "@types/react": "~19.0.10",
+    "metro-react-native-babel-preset": "^0.77.0",
     "typescript": "^5.3.3"
   },
   "private": true
