--- a/eventura-app/package.json
+++ b/eventura-app/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/stack": "^7.3.1",
+    "dotenv": "^16.5.0",
     "expo": "^53.0.7",
     "expo-router": "~5.0.5",
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
     "react-native": "^0.79.2",
     "react-native-dotenv": "^3.4.11",
-    "router": "^2.2.0"
+    "router": "^2.2.0",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
