--- a/eventura-app/package.json
+++ b/eventura-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/stack": "^7.3.1",
     "dotenv": "^16.5.0",
     "expo": "^53.0.7",
