--- a/eventura-app/package.json
+++ b/eventura-app/package.json
@@ -17,9 +17,10 @@
     "expo-router": "~5.0.5",
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "^0.79.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-web": "^0.20.0",
     "router": "^2.2.0"
   },
